// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|VerticalTabs/Group active item 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-1972lph=""
      >
        <div>
          <span
            data-css-1mxrpw9=""
          >
            Group Header
          </span>
        </div>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-active={true}
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Group basic 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li
      data-css-1268me8=""
    >
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Group collapsible 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <div>
      <h2
        data-css-1972lph=""
      >
        <button
          aria-label="Expand"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-1mxrpw9=""
          >
            Group Header
          </span>
          <div
            data-css-1gtb6c4=""
            data-css-1gzzcm2=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        data-css-1y8i23u=""
      >
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Group collapsible open 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <div>
      <h2
        data-css-1972lph=""
      >
        <button
          aria-label="Collapse"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-1mxrpw9=""
          >
            Group Header
          </span>
          <div
            data-css-1gzzcm2=""
            data-css-1rikgj2=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        data-css-1y8i23u=""
      >
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Group header 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-1972lph=""
      >
        <div>
          <span
            data-css-1mxrpw9=""
          >
            Group Header
          </span>
        </div>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Group tiers 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-1972lph=""
      >
        <div>
          <span
            data-css-1mxrpw9=""
          >
            Group Header
          </span>
        </div>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                First
              </span>
            </span>
          </div>
          <ul
            data-css-gkw1j5=""
          >
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    First
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Second
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Third
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Second
              </span>
            </span>
          </div>
          <ul
            data-css-gkw1j5=""
          >
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    First
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Second
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Third
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier1 active 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li>
      <div
        data-active={true}
        data-css-1dfha3z=""
        data-css-1pa08jv=""
      >
        <span
          data-css-zrqgca=""
        >
          <div
            data-active={true}
            data-css-1kqp8s2=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-1mxrpw9=""
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier1 basic 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li>
      <div
        data-css-1dfha3z=""
        data-css-1pa08jv=""
      >
        <span
          data-css-zrqgca=""
        >
          <div
            data-css-1kqp8s2=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-1mxrpw9=""
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier1 button 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li>
      <div
        data-css-1dfha3z=""
        data-css-1pa08jv=""
      >
        <button
          data-css-zrqgca=""
          onClick={[Function]}
        >
          <div
            data-css-1kqp8s2=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-1mxrpw9=""
          >
            text here
          </span>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier1 collapsible 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li>
      <div
        data-css-1dfha3z=""
        data-css-1pa08jv=""
      >
        <button
          data-css-zrqgca=""
          onClick={[Function]}
        >
          <div
            data-css-1kqp8s2=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-1mxrpw9=""
          >
            text here
          </span>
          <div
            data-css-1gzzcm2=""
            data-css-7bjcwq=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </div>
      <ul
        aria-hidden={false}
        data-css-gkw1j5=""
        data-css-jlpnjv=""
      >
        <div
          data-css-kiwo0=""
        />
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier1 link 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li>
      <div
        data-css-1dfha3z=""
        data-css-1pa08jv=""
      >
        <a
          data-css-zrqgca=""
          href="#"
        >
          <div
            data-css-1kqp8s2=""
            data-css-7dab2f=""
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-1mxrpw9=""
          >
            text here
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier2 active 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li>
      <div
        data-active={true}
        data-css-1pa08jv=""
        data-css-1xd3fna=""
      >
        <span>
          <span
            data-css-1mxrpw9=""
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier2 basic 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li>
      <div
        data-css-1pa08jv=""
        data-css-1xd3fna=""
      >
        <span>
          <span
            data-css-1mxrpw9=""
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier2 button 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li>
      <div
        data-css-1pa08jv=""
        data-css-1xd3fna=""
      >
        <button
          onClick={[Function]}
        >
          <span
            data-css-1mxrpw9=""
          >
            text here
          </span>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/Tier2 link 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li>
      <div
        data-css-1pa08jv=""
        data-css-1xd3fna=""
      >
        <a
          href="#"
        >
          <span
            data-css-1mxrpw9=""
          >
            text here
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components|VerticalTabs/examples Admin Tools 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "height": "100%",
      "justifyContent": "start",
      "width": "100%",
    }
  }
>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "width": 72,
      }
    }
  >
    <ul
      data-css-15hj73r=""
    >
      <li
        data-css-1268me8=""
      >
        <ul
          data-css-gkw1j5=""
        >
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-113cwui=""
                >
                  Dashboard
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-113cwui=""
                >
                  Account
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <button
                data-css-zrqgca=""
                onClick={[Function]}
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-113cwui=""
                >
                  People
                </span>
                <div
                  data-css-1gzzcm2=""
                  data-css-7bjcwq=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <ul
              aria-hidden={false}
              data-css-gkw1j5=""
              data-css-jlpnjv=""
            >
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Organization
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-active={true}
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Admins
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Managers
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Unassigned users
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Pending invites
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-113cwui=""
                >
                  Analytics
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-113cwui=""
                >
                  Log
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots components|VerticalTabs/examples Design System 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "height": "100%",
      "justifyContent": "start",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "width": 240,
      }
    }
  >
    <ul
      data-css-15hj73r=""
    >
      <li
        data-css-1268me8=""
      >
        <h2
          data-css-1972lph=""
        >
          <div>
            <span
              data-css-1mxrpw9=""
            >
              Introduction
            </span>
          </div>
        </h2>
        <ul
          data-css-gkw1j5=""
        >
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <span
                  data-css-1mxrpw9=""
                >
                  Install
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <span
                  data-css-1mxrpw9=""
                >
                  Design assets
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <span
                  data-css-1mxrpw9=""
                >
                  Contribute
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <span
                  data-css-1mxrpw9=""
                >
                  Roadmap
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
        </ul>
      </li>
      <hr
        data-css-7hrnfu=""
      />
      <li
        data-css-1268me8=""
      >
        <h2
          data-css-1972lph=""
        >
          <div>
            <span
              data-css-1mxrpw9=""
            >
              Foundations
            </span>
          </div>
        </h2>
        <ul
          data-css-gkw1j5=""
        >
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-1mxrpw9=""
                >
                  Color
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-1mxrpw9=""
                >
                  Typography
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-1mxrpw9=""
                >
                  Spacing
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-1mxrpw9=""
                >
                  Iconography
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-1mxrpw9=""
                >
                  Voice & Tone
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
        </ul>
      </li>
      <hr
        data-css-7hrnfu=""
      />
      <li
        data-css-1268me8=""
      >
        <h2
          data-css-1972lph=""
        >
          <div>
            <span
              data-css-1mxrpw9=""
            >
              Components
            </span>
          </div>
        </h2>
        <ul
          data-css-gkw1j5=""
        >
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <span
                  data-css-1mxrpw9=""
                >
                  Avatar
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            >
              <li>
                <div
                  data-active={true}
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-1mxrpw9=""
                    >
                      PropTypes
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-1mxrpw9=""
                    >
                      Guidelines
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <span
                  data-css-1mxrpw9=""
                >
                  Badge
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <a
                data-css-zrqgca=""
                href="#"
                onClick={[Function]}
              >
                <span
                  data-css-1mxrpw9=""
                >
                  Breadcrumb
                </span>
              </a>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
        </ul>
      </li>
      <hr
        data-css-7hrnfu=""
      />
    </ul>
  </div>
</div>
`;

exports[`Storyshots components|VerticalTabs/examples FLOW 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "height": "100%",
      "justifyContent": "start",
      "width": "100%",
    }
  }
>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "width": 72,
      }
    }
  >
    <ul
      data-css-15hj73r=""
    >
      <li
        data-css-1268me8=""
      >
        <ul
          data-css-gkw1j5=""
        >
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <span
                data-css-zrqgca=""
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-113cwui=""
                >
                  Reports Home
                </span>
              </span>
            </div>
            <ul
              data-css-gkw1j5=""
            />
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <button
                data-css-zrqgca=""
                onClick={[Function]}
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-113cwui=""
                >
                  Operational Reports
                </span>
                <div
                  data-css-1gzzcm2=""
                  data-css-7bjcwq=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <ul
              aria-hidden={true}
              data-css-gkw1j5=""
              data-css-jlpnjv=""
            >
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Work Log
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Project Timeline
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Leaderboard
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Snapshot
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Daily Updates
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Spot Check
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <button
                data-css-zrqgca=""
                onClick={[Function]}
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-113cwui=""
                >
                  Review & Collaborate
                </span>
                <div
                  data-css-1gzzcm2=""
                  data-css-7bjcwq=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <ul
              aria-hidden={true}
              data-css-gkw1j5=""
              data-css-jlpnjv=""
            >
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Review Workflow
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Review Collaboration
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-active={true}
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      PR Resolution
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Knowledge Sharing
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Player Card
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <button
                data-css-zrqgca=""
                onClick={[Function]}
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-113cwui=""
                >
                  Delivery
                </span>
                <div
                  data-css-1gzzcm2=""
                  data-css-7bjcwq=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <ul
              aria-hidden={true}
              data-css-gkw1j5=""
              data-css-jlpnjv=""
            >
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Retrospective
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              data-css-1dfha3z=""
              data-css-1pa08jv=""
            >
              <button
                data-css-zrqgca=""
                onClick={[Function]}
              >
                <div
                  data-css-1kqp8s2=""
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                    />
                  </svg>
                </div>
                <span
                  data-css-113cwui=""
                >
                  Fundamentals
                </span>
                <div
                  data-css-1gzzcm2=""
                  data-css-7bjcwq=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <ul
              aria-hidden={true}
              data-css-gkw1j5=""
              data-css-jlpnjv=""
            >
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Code
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Submit
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  data-css-1pa08jv=""
                  data-css-1xd3fna=""
                >
                  <a
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      data-css-113cwui=""
                    >
                      Review
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots components|VerticalTabs/truncation basic 1`] = `
<div
  data-css-b1z6un=""
>
  <ul
    data-css-15hj73r=""
  >
    <li
      data-css-1268me8=""
    >
      <h2
        data-css-1972lph=""
      >
        <div>
          <span
            data-css-1mxrpw9=""
          >
            Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
          </span>
        </div>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            data-css-gkw1j5=""
          >
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-7dab2f=""
              >
                <svg
                  aria-label="placeholder icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-1mxrpw9=""
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            data-css-gkw1j5=""
          >
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <div>
      <h2
        data-css-1972lph=""
      >
        <button
          aria-label="Collapse"
          data-css-h54kwj=""
          onClick={[Function]}
        >
          <span
            data-css-1mxrpw9=""
          >
            Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
          </span>
          <div
            data-css-1gzzcm2=""
            data-css-1rikgj2=""
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        data-css-1y8i23u=""
      >
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <span
                data-css-1mxrpw9=""
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            data-css-gkw1j5=""
          >
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            data-css-1dfha3z=""
            data-css-1pa08jv=""
          >
            <span
              data-css-zrqgca=""
            >
              <div
                data-css-1kqp8s2=""
                data-css-7dab2f=""
              >
                <svg
                  aria-label="placeholder icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-1mxrpw9=""
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            data-css-gkw1j5=""
          >
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1pa08jv=""
                data-css-1xd3fna=""
              >
                <span>
                  <span
                    data-css-1mxrpw9=""
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </ul>
</div>
`;
